--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -77,7 +77,7 @@
                     console.error(e);
                 }
             };
-            xhr.open("POST", 'http://localhost:8080', true);
+            xhr.open("POST", 'http://localhost:8081', true);
             xhr.setRequestHeader('Content-type', 'application/json');
             xhr.send(_msg);
         };
@@ -97,7 +97,7 @@
             var asd = jrpc.call('url_reduce', [$('input[type="url"]').val()])
                 .then(function (data) {
                     isShowStatusBlock(true);
-                    $statusSuccessBlockUrl.text(location.href + '/' + data);
+                    $statusSuccessBlockUrl.text(location.href + data);
                 })
                 .catch(function (data) {
                     console.error(data);
