delete unused code

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -23,7 +23,7 @@
 
         <div class="mt-5 status-block">
             <div class="text-muted small text-uppercase status-block-text">Ваша ссылка готова!</div>
-            <div class="status-block-url">http://localhost:8080/asdas</div>
+            <div class="status-block-url"></div>
         </div>
     </form>
 
@@ -45,7 +45,6 @@
     .status-block {
         opacity: 0;
     }
-
 </style>
 
 
